# cymyc

./: .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: ci.yml
_static/: gen_ref_pages.py
api/chern_gauss_bonnet/: index.html
api/curvature/: index.html
api/fubini_study/: index.html
api/harmonic/: index.html
api/losses/: index.html
api/models/: index.html
api/moduli_space/: index.html
compress/: pyvenv.cfg
cymyc/: alg_geo.py  bundle.py  chern_gauss_bonnet.py  curvature.py  dataloading.py  fubini_study.py  monad_bundle.py  monads.py
cymyc/approx/: bundle.py  default_config.py  eta_train.py  harmonic.py  harmonic_bundle.py  hym.py  losses.py  measures.py  models.py  p_train.py  train.py
cymyc/moduli/: moduli_scan.py  wp.py
cymyc/utils/: .gen_utils.py.swp  gen_utils.py  math_utils.py  ops.py  pointgen.py  pointgen_cicy.py  poly_utils.py  types.py
docs/: .citation.md  basics.md  faq.md  index.md  overview.md  requirements.txt
docs/api/: chern_gauss_bonnet.md  curvature.md  example.md  fubini_study.md  harmonic.md  losses.md  models.md  moduli_space.md
docs/examples/: cs_moduli.md  curvature.ipynb  curvature.md  harmonic.ipynb  harmonic_forms.md  metric_approx.ipynb  ricci_flat_metrics.md  workflow.md
examples/: poly_spec.py
examples/cs_moduli/: index.html
examples/curvature/: index.html
examples/examples/: cs_moduli.md  workflow.md
examples/harmonic/: index.html
examples/metric_approx/: index.html
examples/tian_yau/: TY_KM_poly_spec.py  gen_metadata_TY.py  moduli_pg_TY.py  wp_moduli_scan.py
examples/workflow/: index.html
faq/: index.html
overview/: index.html
search/: search_index.json
src/: curvature.py  example.py
src/utils/: gen_utils.py  math_utils.py  ops.py  pointgen.py  pointgen_cicy.py
