[project]
name = "cymyc"
version = "0.01.1"
description = "Numerical differential geometry on Calabi-Yau manifolds"
readme = "README.md"
requires-python ="~=3.10"
license = {file = "LICENSE"}
authors = [
  {name = "Justin Tan", email = "justin(dot)tan@cl.cam.ac.uk"},
]
keywords = ["geometry", "scientific-computing", "jax", "neural-networks"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Mathematics",
]
urls = {repository = "https://github.com/justin-tan/cymyc" }
dependencies = ["jax>=0.4.13,!=0.4.27", "jaxtyping>=0.2.20", "typing_extensions>=4.5.0"]

