[project]
name = "cymyc"
version = "0.0.1.dev1"
description = "Numerical differential geometry on Calabi-Yau manifolds"
readme = "README.md"
requires-python ="~=3.10"
license = {file = "LICENSE"}
authors = [
  {name = "Justin Tan", email = "justin.tan@cl.cam.ac.uk"},
  {name = "Giorgi Butbaia", email = "giorgi.butbaia@unh.edu"}
]
keywords = ["geometry", "physics", "scientific-computing", "jax", "string-theory"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
]
urls = {repository = "https://github.com/justin-tan/cymyc" }
dependencies = [
    "jax>=0.4.20",
    "jaxlib>=0.4.20",
    "joblib>=1.4.2",
    "tqdm>=4.66.4",
    "sympy>=1.12.1",
    "jaxtyping>=0.2.20",
    "optax>=0.2.3",
    "flax>=0.8.5",
    "typing_extensions>=4.5.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["cymyc*"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

# [build-system]
# requires = ["hatchling"]
# build-backend = "hatchling.build"